fable/test/valid/data_02.f
      program prog
      common /com/ num
      data num /3/
      write(6, *) num
      end
