fable/test/semantic_error/external_common.f
      program prog
      common /com/ nums
      external nums
      end
